<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_battery</name>
  <version>0.1.3</version>
  <description>Package for modelling battery life of robots</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>rmf_utils</build_depend>
  <build_export_depend>rmf_utils</build_export_depend>

  <depend>rmf_traffic</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
